wip: Update create-instance workflow checking for "instance:approved" label

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -11,7 +11,7 @@ concurrency:
 jobs:
   create:
     runs-on: self-hosted
-    if: github.event.label.name == 'instance:requested'
+    if: github.event.label.name == 'instance:approved'
     steps:
       - run: |
           echo Creating instance associated with issue $NUMBER
