wip: Add support for sending email on instance created, started or stopped
App password created using https://myaccount.google.com/apppasswords

--- a/.github/ISSUE_TEMPLATE/request.yml
+++ b/.github/ISSUE_TEMPLATE/request.yml
@@ -33,3 +33,10 @@ body:
       description: Briefly describe how you will be using the instance.
     validations:
       required: false
+
+  - type: input
+    attributes:
+      label: Email
+      description: Email to use for notifications.
+    validations:
+      required: true
