--- a/.github/workflows/control-instance.yml
+++ b/.github/workflows/control-instance.yml
@@ -20,6 +20,30 @@ jobs:
         env:
           NUMBER: ${{ github.event.issue.number }}
 
+      - name: Extract email
+        id: extract
+        run: |
+          email=$(
+            echo ${{ toJSON(steps.parse.outputs.data) }} |
+            jq -r ".email.text"
+          )
+          echo "email=$email" >> $GITHUB_OUTPUT
+
+      - name: Send mail
+        uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
+          from: MorphoCloudPortal
+          to: ${{ steps.extract.outputs.email }}
+          subject:
+            "[MorphoCloudPortal] Instance ${{ github.event.issue.number }}
+            started"
+          body: Instance ${{ github.event.issue.number }} started
+
   stop:
     runs-on: self-hosted
     if:
@@ -30,3 +54,31 @@ jobs:
           echo Stopping instance associated with issue $NUMBER
         env:
           NUMBER: ${{ github.event.issue.number }}
+
+      - name: Issue Forms Body Parser
+        id: parse
+        uses: zentered/issue-forms-body-parser@v2.0.0
+
+      - name: Extract email
+        id: extract
+        run: |
+          email=$(
+            echo ${{ toJSON(steps.parse.outputs.data) }} |
+            jq -r ".email.text"
+          )
+          echo "email=$email" >> $GITHUB_OUTPUT
+
+      - name: Send mail
+        uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
+          from: MorphoCloudPortal
+          to: ${{ steps.extract.outputs.email }}
+          subject:
+            "[MorphoCloudPortal] Instance ${{ github.event.issue.number }}
+            stopped"
+          body: Instance ${{ github.event.issue.number }} stopped
