--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -17,3 +17,31 @@ jobs:
           echo Creating instance associated with issue $NUMBER
         env:
           NUMBER: ${{ github.event.issue.number }}
+
+      - name: Issue Forms Body Parser
+        id: parse
+        uses: zentered/issue-forms-body-parser@v2.0.0
+
+      - name: Extract email
+        id: extract
+        run: |
+          email=$(
+            echo ${{ toJSON(steps.parse.outputs.data) }} |
+            jq -r ".email.text"
+          )
+          echo "email=$email" >> $GITHUB_OUTPUT
+
+      - name: Send mail
+        uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
+        with:
+          server_address: smtp.gmail.com
+          server_port: 465
+          secure: true
+          username: ${{secrets.MAIL_USERNAME}}
+          password: ${{secrets.MAIL_PASSWORD}}
+          from: MorphoCloudPortal
+          to: ${{ steps.extract.outputs.email }}
+          subject:
+            "[MorphoCloudPortal] Instance ${{ github.event.issue.number }}
+            created"
+          body: Instance ${{ github.event.issue.number }} created
