--- a/.github/ISSUE_TEMPLATE/request.yml
+++ b/.github/ISSUE_TEMPLATE/request.yml
@@ -13,8 +13,8 @@ body:
 
   - type: dropdown
     attributes:
-      label: Instance Flavor
-      description: Select the type of instance to create.
+      label: Cloud Computing Instance Flavor
+      description: Select the type of cloud-computing instance to create.
       options:
         - m3.xl - General-purpose instance (32 CPUs, 125 GB RAM and 60 GB root
           disk)
