wip: Add steps for creating and associating a floating IP to the instane

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -33,6 +33,32 @@ jobs:
         env:
           NUMBER: ${{ github.event.issue.number }}
 
+      - name: Create floating IP
+        id: ip_create
+        run: |
+          source ~/app-cred-morpho-cloud-portal_github-runner-openrc.sh > /dev/null 2>&1
+          source ~/venv/bin/activate
+
+          json_output=$(openstack floating ip create public -f json)
+          echo $json_output
+
+          floating_ip_address=$(
+            echo $json_output |
+            jq -r ".floating_ip_address"
+          )
+          echo "floating_ip_address [$floating_ip_address]"
+          echo "floating_ip_address=$floating_ip_address" >> $GITHUB_OUTPUT
+
+      - name: Associate floating IP with created instance
+        run: |
+          source ~/app-cred-morpho-cloud-portal_github-runner-openrc.sh > /dev/null 2>&1
+          source ~/venv/bin/activate
+
+          openstack server add floating ip "$INSTANCE_NAME" $IP_ADDRESS
+        env:
+          IP_ADDRESS: ${{ steps.ip_create.outputs.floating_ip_address }}
+          INSTANCE_NAME: ${{ steps.instance_create.outputs.instance_name }}
+
       - name: Issue Forms Body Parser
         id: parse
         uses: zentered/issue-forms-body-parser@v2.0.0
