--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -63,7 +63,11 @@ jobs:
         id: parse
         uses: zentered/issue-forms-body-parser@v2.0.0
 
-      - name: Extract email
+      - name: Display parsed data
+        run: |
+          echo ${{ toJSON(steps.parse.outputs.data) }} | jq .
+
+      - name: Extract fields
         id: extract
         run: |
           email=$(
