wip: Update "openstack server create" to report specific properties
This ensures adminPass is not reported.

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -27,7 +27,12 @@ jobs:
             --security-group "exosphere" \
             --flavor g3.large \
             --image "antsthings-vgl-gpu-image" \
-            --wait
+            --wait \
+            --column created \
+            --column flavor \
+            --column image \
+            --column name \
+            --column status
 
           echo "instance_name=$instance_name" >> $GITHUB_OUTPUT
         env:
