Revert "wip: Associate created instance with "antsthings-vgl-gpu-image" custom image"
This reverts commit badc37e45d8d76261d238359996360e9096c9944.

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -64,7 +64,7 @@ jobs:
             --security-group "default" \
             --security-group "exosphere" \
             --flavor $INSTANCE_FLAVOR \
-            --image "antsthings-vgl-gpu-image" \
+            --image "Featured-Ubuntu22" \
             --user-data ./cloud-config \
             --wait \
             --column created \
