--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -77,6 +77,7 @@ jobs:
             --property "exoServerVersion=$exoServerVersion" \
             --property "exoCreatorUsername=jfillionrobin@access-ci.org" \
             --property "exoFloatingIpOption=automatic" \
+            --property "exoSetup={\"status\":\"waiting\",\"epoch\":null}" \
             --user-data ./cloud-config \
             --wait \
             --column created \
