--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -148,6 +148,65 @@ jobs:
             Failed to create instance ${{
             steps.instance_create.outputs.instance_name }}
 
+      - name: Retrieve metadata
+        id: instance_metadata
+        if: ${{ steps.instance_poll.outputs.status == 'complete' }}
+        run: |
+          source ~/app-cred-morpho-cloud-portal_github-runner-openrc.sh > /dev/null 2>&1
+          source ~/venv/bin/activate
+
+          instance_name="morpho-cloud-portal_instance-$NUMBER"
+          echo Retrieving metadata from instance "$instance_name"
+
+          # Get instance IP
+          instance_ip=$(
+            openstack server show $instance_name -c addresses -f json | \
+            jq -r .addresses.auto_allocated_network[1]
+          )
+          echo "instance_ip=$instance_ip" >> $GITHUB_OUTPUT
+
+          # Get instance password
+          instance_pwd=$(
+            openstack server show $instance_name -c tags -f json | \
+            jq -r '.tags[] | select(startswith("exoPw")) | sub("^exoPw:"; "")'
+          )
+          echo "::add-mask::$instance_pwd"
+          echo "instance_pwd=$instance_pwd" >> $GITHUB_OUTPUT
+        env:
+          NUMBER: ${{ github.event.issue.number }}
+
+      - name: Generate Guacamole Connection URL
+        if: ${{ steps.instance_poll.outputs.status == 'complete' }}
+        id: guacamole
+        run: |
+          # See hard-coded value in exosphere/src/Helpers/Interaction.elm
+          guacamole_port=49528
+
+          # See cloud_configs.js (allocation region is "IU")
+          proxy_hostname=proxy-js2-iu.exosphere.app
+
+          # See "buildProxyUrl" in src/Helpers/Url.elm
+          proxified_instance_ip=${INSTANCE_IP//./-}
+
+          # See "stepServerGuacamoleAuth" in exosphere/src/Orchestration/GoalServer.elm
+          tokens_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/api/tokens"
+          auth_token=$(
+            curl -X POST --silent -d "username=exouser&password=$INSTANCE_PWD" $tokens_url | \
+            jq -r .authToken
+          )
+          echo "::add-mask::$auth_token"
+
+          # See hard-coded value in exosphere/src/Helpers/Interaction.elm
+          client_id=ZGVza3RvcABjAGRlZmF1bHQ
+
+          connection_url="https://http-$proxified_instance_ip-$guacamole_port.$proxy_hostname/guacamole/#/client/$client_id=?token=$auth_token"
+          echo $connection_url
+          echo "connection_url=$connection_url" >> $GITHUB_OUTPUT
+
+        env:
+          INSTANCE_IP: ${{ steps.instance_metadata.outputs.instance_ip }}
+          INSTANCE_PWD: ${{ steps.instance_metadata.outputs.instance_pwd }}
+
       - name: Send mail (completed)
         if: ${{ steps.instance_poll.outputs.status == 'complete' }}
         uses: dawidd6/action-send-mail@2cea9617b09d79a095af21254fbcb7ae95903dde # v3.12.0
@@ -162,8 +221,12 @@ jobs:
           subject:
             "[MorphoCloudPortal] Instance ${{
             steps.instance_create.outputs.instance_name }} created"
-          body:
+          body: |
             Instance ${{ steps.instance_create.outputs.instance_name }} created
+
+            Web connect: ${{ steps.guacamole.outputs.connection_url }}
+            SSH: ssh exouser@${{ steps.instance_metadata.outputs.instance_ip }}
+            Passphrase: ${{ steps.instance_metadata.outputs.instance_pwd }}
 
       - name: Add "instance:created" label
         if: ${{ success() && steps.instance_poll.outputs.status == 'complete' }}
