wip: Fix extraction of cloud computing instance flavor
Follow-up of 4cd3d48 ("wip: Update issue template "Instance" -> "Cloud Computing Instance"", 2024-04-18)

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -44,7 +44,7 @@ jobs:
 
           instance_flavor=$(
             echo ${{ toJSON(steps.parse.outputs.data) }} |
-            jq -r '."instance-flavor".text | split(" - ")[0]'
+            jq -r '."cloud-computing-instance-flavor".text | split(" - ")[0]'
           )
           echo "instance_flavor=$instance_flavor" >> $GITHUB_OUTPUT
 
