wip: Re-enable request labeler workflow
This reverts commit 6be8324a6 (wip: Update request labeler workflow to be no-op)

Since the user who created the issue can also update its description,
the label will be used as the authoritative source to describe the
type of instance (aka flavor) associated with a server.

It also fixes the extraction of the value adapting change similar
to 40d5f12 (wip: Fix extraction of cloud computing instance flavor)

--- a/.github/workflows/request-labeler.yml
+++ b/.github/workflows/request-labeler.yml
@@ -22,13 +22,12 @@ jobs:
         id: extract
         run: |
           instance_flavor=$(echo ${{ toJSON(steps.parse.outputs.data) }} | \
-            jq -r '."instance-flavor".text' | sed 's/ -.*$//')
+            jq -r '."cloud-computing-instance-flavor".text | split(" - ")[0]')
           echo "instance_flavor [$instance_flavor]"
           echo "instance_flavor=$instance_flavor" >> $GITHUB_OUTPUT
 
       - name: Add flavor label
-        # Since instance flavor is already reported in the issue description, labels have been removed
-        run: true || gh issue edit "$NUMBER" --add-label "$LABELS"
+        run: gh issue edit "$NUMBER" --add-label "$LABELS"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
