wip: Tweak workflow to attempt creating server only if does not exists

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -67,7 +67,29 @@ jobs:
 
       - uses: actions/checkout@v4
 
+      - name: Check instance exists
+        id: check_instance
+        run: |
+          export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
+
+          source ~/venv/bin/activate
+
+          instance=$(openstack server list -f json | \
+            jq \
+              --arg instance_name "$INSTANCE_NAME" \
+              -c '.[] | select(.Name | contains($instance_name))' | \
+            jq -r '.Name')
+
+          [[ $instance == "$INSTANCE_NAME" ]] && exists="true" || exists="false"
+
+          echo "exists [$exists]"
+          echo "exists=$exists" >> $GITHUB_OUTPUT
+
+        env:
+          INSTANCE_NAME: ${{ steps.define.outputs.instance_name }}
+
       - name: Create instance
+        if: ${{ !fromJSON(steps.check_instance.outputs.exists) }}
         run: |
           export OS_CLOUD=BIO180006_IU # Select openstack auth settings defined in ".config/openstack/clouds.yaml"
 
