wip: Retrieve status directly from console log
Since the status property is set a side-effect of having the exospere
webapp running in a browser, we explicitly retrieve the status.

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -190,9 +190,9 @@ jobs:
 
           while [ $total_wait_time -lt $max_wait_time ]; do
 
-              status=$(openstack server show "$INSTANCE_NAME" -f json -c properties | \
-                jq -r .properties | \
-                jq -r .exoSetup | \
+              status=$(openstack console log show $INSTANCE_NAME | \
+                grep "^\{\"status\":\"" | \
+                tail -1 | \
                 jq -r .status)
 
               has_pwd=$(
