wip: Ensure server password can be retrieved without having the webapp running
Since the tags property is set with the "exoPw" value as a side-effect of
having the exospere webapp running in a browser, we explicitly retrieve
its value running the curl command locally on the associated instance.

--- a/.github/workflows/create-instance.yml
+++ b/.github/workflows/create-instance.yml
@@ -195,13 +195,9 @@ jobs:
                 tail -1 | \
                 jq -r .status)
 
-              has_pwd=$(
-                openstack server show $INSTANCE_NAME -c tags -f json | \
-                jq -r '.tags[] | startswith("exoPw")')
+              echo -n "status [$status]. "
 
-              echo -n "status [$status], has_pwd [$has_pwd]. "
-
-              if [[ "$status" = "complete" && $has_pwd ]]; then
+              if [[ "$status" = "complete" ]]; then
                   echo "Exiting loop."
                   break
               else
@@ -255,6 +251,15 @@ jobs:
             openstack server show $INSTANCE_NAME -c tags -f json | \
             jq -r '.tags[] | select(startswith("exoPw")) | sub("^exoPw:"; "")'
           )
+          if [[ -z "$instance_pwd" ]]; then
+            # Since 'exoPw' tag is not yet set, attempt to directly retrieve the password using
+            # the openstack endpoint local to the instance.
+            if ! grep "$(ssh-keyscan $FLOATING_IP_ADDRESS 2>/dev/null)" ~/.ssh/known_hosts > /dev/null; then
+              ssh-keyscan -t ed25519 $FLOATING_IP_ADDRESS >> ~/.ssh/known_hosts
+            fi
+            instance_pwd=$(ssh exouser@$FLOATING_IP_ADDRESS \
+              'curl --silent http://169.254.169.254/openstack/latest/password')
+          fi
           echo "::add-mask::$instance_pwd"
           echo "instance_pwd=$instance_pwd" >> $GITHUB_OUTPUT
         env:
